Update to Spring Boot 4 (#8)
* Update to Spring Boot 4

* Use Flume internal SuppressFBWarnings annotation

Replace the LGPL-licensed edu.umd.cs.findbugs SuppressFBWarnings
annotation with Flume's internal org.apache.flume.conf.internal
SuppressFBWarnings, and drop the now-unused spotbugs-annotations
dependency.

Assisted-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>

* Set version to 2.0.0-SNAPSHOT and import third-party deps BOM

Change the project version from 2.1.0-SNAPSHOT to 2.0.0-SNAPSHOT and
import the flume-third-party-dependencies BOM in dependencyManagement.

Assisted-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>

---------

Co-authored-by: Piotr P. Karwasz <piotr@github.copernik.eu>