@@ -17,7 +17,9 @@
 package org.apache.flume.spring.boot.config;
 
 import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import org.apache.flume.Channel;
 import org.apache.flume.ChannelSelector;
@@ -29,7 +31,10 @@ import org.apache.flume.SinkRunner;
 import org.apache.flume.Source;
 import org.apache.flume.SourceRunner;
 import org.apache.flume.channel.ChannelProcessor;
+import org.apache.flume.channel.ReplicatingChannelSelector;
 import org.apache.flume.conf.Configurables;
+import org.apache.flume.conf.channel.ChannelType;
+import org.apache.flume.interceptor.Interceptor;
 
 /**
  * The primarily provides helper methods to create and configure the various Flume components.
@@ -37,11 +42,19 @@ import org.apache.flume.conf.Configurables;
  */
 public abstract class AbstractFlumeConfiguration {
 
+    /**
+     * Create amd configure a Channel.
+     * @param name the Channel name.
+     * @param clazz the Channel Class to create.
+     * @param params parameters needed for configuration.
+     * @return The Channel.
+     * @param <T> The specific type of Channel.
+     */
     protected <T extends Channel> T configureChannel(
             final String name, final Class<T> clazz, final Map<String, String> params) {
         T channel;
         try {
-            channel = clazz.newInstance();
+            channel = clazz.getDeclaredConstructor().newInstance();
         } catch (Exception ex) {
             throw new FlumeException("Unable to create channel " + name, ex);
         }
@@ -50,32 +63,74 @@ public abstract class AbstractFlumeConfiguration {
         return channel;
     }
 
+    /**
+     * Create and configure a Source and its SourcRunner. A ChannelSelector may be provided.
+     * @param name The name of the Source.
+     * @param clazz The Source class to be created and configured.
+     * @param selector The Channel Selector.
+     * @param params parameters required for configuration.
+     * @return The SourceRunner.
+     * @param <T> The Source Class.
+     */
     protected <T extends Source> SourceRunner configureSource(
             final String name, final Class<T> clazz, final ChannelSelector selector, final Map<String, String> params) {
+        return configureSource(name, clazz, selector, null, params);
+    }
+
+    /**
+     * Create and configure a Source and its SourcRunner. A ChannelSelector and Interceptors may be provided.
+     * @param name The name of the Source.
+     * @param clazz The Source class to be created and configured.
+     * @param selector The Channel Selector.
+     * @param interceptors A List of Interceptors.
+     * @param params parameters required for configuration.
+     * @return The SourceRunner.
+     * @param <T> The Source Class.
+     */
+    protected <T extends Source> SourceRunner configureSource(
+            final String name,
+            final Class<T> clazz,
+            final ChannelSelector selector,
+            final List<Interceptor> interceptors,
+            final Map<String, String> params) {
         T source;
         try {
-            source = clazz.newInstance();
+            source = clazz.getDeclaredConstructor().newInstance();
         } catch (Exception ex) {
             throw new FlumeException("Unable to create source " + name, ex);
         }
         source.setName(name);
+        ChannelSelector channelSelector = selector != null ? selector : new ReplicatingChannelSelector();
         Configurables.configure(source, createContext(params));
-        ChannelProcessor channelProcessor = new ChannelProcessor(selector);
-        source.setChannelProcessor(new ChannelProcessor(selector));
+        return configureSource(source, channelSelector);
+    }
+
+    /**
+     * Set up an already configured Source for processing.
+     * @param source The Source.
+     * @param selector The Channel Selector.
+     * @return The SourceRunner.
+     * @param <T> The Source Class.
+     */
+    protected <T extends Source> SourceRunner configureSource(final T source, final ChannelSelector selector) {
+        ChannelSelector channelSelector = selector != null ? selector : new ReplicatingChannelSelector();
+        source.setChannelProcessor(new ChannelProcessor(channelSelector));
         return SourceRunner.forSource(source);
     }
 
-    protected <T extends Source> SourceRunner configureSource(
-            final T source, final ChannelSelector selector, final Map<String, String> params) {
-        source.setChannelProcessor(new ChannelProcessor(selector));
-        return SourceRunner.forSource(source);
-    }
-
+    /**
+     * Set up already configured Sinks for processing.
+     * @param params The SinkProcessor's parameters.
+     * @param clazz The SinkProcessor Class.
+     * @param sinks The list of Sinks.
+     * @return The SinkProcessor.
+     * @param <T> The specific type of the SinkProcessor.
+     */
     protected <T extends SinkProcessor> T configureSinkProcessor(
             final Map<String, String> params, final Class<T> clazz, final List<Sink> sinks) {
         T processor;
         try {
-            processor = clazz.newInstance();
+            processor = clazz.getDeclaredConstructor().newInstance();
         } catch (Exception ex) {
             throw new FlumeException("Unable to create SinkProcessor of type: " + clazz.getName(), ex);
         }
@@ -84,17 +139,52 @@ public abstract class AbstractFlumeConfiguration {
         return processor;
     }
 
+    /**
+     * Set up the SinkProcessors and SinkRunners for a list of Sinks.
+     * @param processorProperties The SinkProcessor's parameters.
+     * @param sinkProcessorClass The SinkProcessor to create.
+     * @param sinks The Map of Sink Lists with the key being the name of a group of channels to which the sinks are attached.
+     * @return A Map of the SinkRunners
+     */
+    protected Map<String, SinkRunner> createSinkRunners(
+            final Map<String, String> processorProperties,
+            final Class<? extends SinkProcessor> sinkProcessorClass,
+            final Map<String, List<Sink>> sinks) {
+        Map<String, SinkRunner> sinkRunners = new HashMap<>();
+        for (Map.Entry<String, List<Sink>> entry : sinks.entrySet()) {
+            sinkRunners.put(
+                    entry.getKey(),
+                    createSinkRunner(
+                            configureSinkProcessor(processorProperties, sinkProcessorClass, entry.getValue())));
+        }
+        return sinkRunners;
+    }
+
+    /**
+     * Creates the SinkRunner.
+     * @param sinkProcessor The SinkProcessor.
+     * @return A SinkRunner.
+     */
     protected SinkRunner createSinkRunner(SinkProcessor sinkProcessor) {
         SinkRunner runner = new SinkRunner(sinkProcessor);
         runner.setSink(sinkProcessor);
         return runner;
     }
 
+    /**
+     * Create and configure a Sink.
+     * @param name The name of the Sink.
+     * @param sinkClazz The Class object for the Sink.
+     * @param channel The Channel attached to the Sink.
+     * @param params Parameters to configure the Sink.
+     * @return The Sink.
+     * @param <T> The type of Sink being created.
+     */
     protected <T extends Sink> Sink configureSink(
             final String name, final Class<T> sinkClazz, final Channel channel, final Map<String, String> params) {
         T sink;
         try {
-            sink = sinkClazz.newInstance();
+            sink = sinkClazz.getDeclaredConstructor().newInstance();
         } catch (Exception ex) {
             throw new FlumeException("Unable to create sink " + name, ex);
         }
@@ -104,17 +194,39 @@ public abstract class AbstractFlumeConfiguration {
         return sink;
     }
 
+    /**
+     * Create the channel selector and configure it.
+     * @param clazz    The Selector class.
+     * @param channels The Channels.
+     * @param params   The configuration parameters.
+     * @return The ChannelSelector.
+     */
     protected ChannelSelector createChannelSelector(
             Class<? extends ChannelSelector> clazz, List<Channel> channels, Map<String, String> params) {
         ChannelSelector selector;
         try {
-            selector = clazz.newInstance();
+            selector = clazz.getDeclaredConstructor().newInstance();
         } catch (Exception ex) {
             throw new FlumeException("Unable to create channel selector " + clazz.getName(), ex);
         }
         selector.setChannels(channels);
         Configurables.configure(selector, createContext(params));
         return selector;
+    }
+
+    @SuppressWarnings("unchecked")
+    protected Class<? extends Channel> getChannelClass(String type) {
+        if (type == null) {
+            return null;
+        } else {
+            ChannelType channelType = null;
+            try {
+                channelType = ChannelType.valueOf(type.toUpperCase(Locale.getDefault()));
+                return Class.forName(channelType.name()).asSubclass(Channel.class);
+            } catch (Exception ex) {
+                return null;
+            }
+        }
     }
 
     /**
@@ -129,7 +241,13 @@ public abstract class AbstractFlumeConfiguration {
         return Arrays.asList(items);
     }
 
-    private static Context createContext(Map<String, String> map) {
+    /**
+     * Create a Context from the Map.
+     *
+     * @param map contains the configuration parameters for the component being provisioned.
+     * @return The Context.
+     */
+    protected static Context createContext(Map<String, String> map) {
         return map != null ? new Context(map) : new Context();
     }
 }
